<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; Sign In</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <plurals name="accounts_category_summary">
        <item quantity="one"><xliff:g id="accounts_number">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="accounts_number">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="remotes_and_accessories_category_title">Remotes &amp; Accessories</string>
    <string name="remotes_and_accessories_category_summary_no_bluetooth_device">No connected Bluetooth devices</string>
    <plurals name="remotes_and_accessories_category_summary">
        <item quantity="one"><xliff:g id="accessories_number">%1$d</xliff:g> accessory</item>
        <item quantity="other"><xliff:g id="accessories_number">%1$d</xliff:g> accessories</item>
    </plurals>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="all_apps_title">All apps</string>
    <string name="all_apps_show_system_apps">Show system apps</string>
    <string name="all_apps_installed">Installed apps</string>
    <string name="all_apps_other">System apps</string>
    <string name="all_apps_disabled">Disabled apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Applications</string>
    <string name="device_storage">Storage</string>
    <string name="device_reset">Reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_factory_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_category_title">Surround Sound</string>
    <string name="surround_sound_format_ac3">AC3 (Dolby Digital)</string>
    <string name="surround_sound_format_e_ac3">E-AC3 (Dolby Digital Plus/DD+)</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_iec61937">IEC61937</string>
    <string name="surround_sound_auto_info">Note: The Auto option may not work if your device does not report its supported formats correctly.</string>
    <string name="surround_sound_auto_summary">Auto: Use the formats that your device reports supporting (recommended)</string>
    <string name="surround_sound_none_summary">None: Never use surround sound</string>
    <string name="surround_sound_manual_summary">Manual: Select which formats to use</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessory_change_name">Change name</string>
    <string name="accessory_change_name_title">Enter a new name for this accessory</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_keyboard_autofill">Keyboard &amp; Autofill</string>
    <string name="system_autofill">Autofill</string>
    <string name="system_home">Home screen</string>
    <string name="system_search">Search</string>
    <string name="system_google">Google</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_speech">Speech</string>
    <string name="system_inputs">Inputs</string>
    <string name="system_inputs_devices">Inputs &amp; devices</string>
    <string name="system_home_theater_control">Home theater control</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_developer_options">Developer options</string>
    <string name="accessibility_none">None</string>
    <string name="system_diagnostic">Usage &amp; Diagnostics</string>
    <string name="tutorials">Tutorials</string>
    <string name="about_system_update">System update</string>
    <string name="about_preference">About</string>
    <string name="device_name">Device name</string>
    <string name="restart_button_label">Restart</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_legal_license">Open source licenses</string>
    <string name="about_terms_of_service">Google legal</string>
    <string name="about_license_activity_unavailable">License data is unavailable</string>
    <string name="about_model">Model</string>
    <string name="about_version">Version</string>
    <string name="about_serial">Serial number</string>
    <string name="about_build">Build</string>
    <plurals name="show_dev_countdown">
        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer</item>
        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer</item>
    </plurals>
    <string name="about_ads">Ads</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer</string>
    <string name="device_info_default">Unknown</string>
    <string name="selinux_status">SELinux status</string>
    <string name="selinux_status_disabled">Disabled</string>
    <string name="system_location">Location</string>
    <string name="title_current_keyboard">Current keyboard</string>
    <string name="title_current_autofill_service">Current Autofill Service</string>
    <string name="device_apps_permissions">App permissions</string>
    <string name="manage_keyboards">Manage keyboards</string>
    <string name="usage_access">Usage access</string>
    <string name="high_power_apps">Energy optimization</string>
    <string name="manage_notification_access_title">Notification access</string>
    <string name="system_alert_window_settings">Display over other apps</string>
    <string name="write_system_settings">Modify system settings</string>
    <string name="picture_in_picture_title">Picture-in-picture</string>
    <string name="special_access">Special app access</string>
</resources>