<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2018 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_keyboard_autofill">

    <!-- Cannot put children under keyboardCategory because we want to hide category without hiding children -->
    <PreferenceCategory
        android:key="keyboardCategory"
        android:order="0"
        android:title="@string/system_keyboard"
        android:layout="@layout/preference_category_compact_layout">
    </PreferenceCategory>

    <ListPreference
        android:key="currentKeyboard"
        android:order="1"
        android:dialogTitle="@string/title_current_keyboard"
        android:title="@string/title_current_keyboard"
        android:summary="%s" />

    <!-- List of input methods are inserted here with order=2 -->

    <Preference
        android:fragment="com.android.tv.settings.inputmethod.AvailableVirtualKeyboardFragment"
        android:key="manageKeyboards"
        android:order="3"
        android:title="@string/manage_keyboards"/>

    <PreferenceCategory
        android:order="4"
        android:key="autofillCategory"
        android:title="@string/system_autofill"
        android:layout="@layout/preference_category_compact_layout">

        <Preference
            android:key="currentAutofill"
            android:title="@string/title_current_autofill_service"
            android:fragment="com.android.tv.settings.autofill.AutofillPickerFragment"
            android:summary="%s" />

    </PreferenceCategory>

</PreferenceScreen>
